--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -13,6 +13,7 @@
 	height: 100%;
 	padding: 0 10px;
 	line-height: 50px;
+	font-size: 18px;
 }
 
 .NavigationItem a:hover, .NavigationItem a:active, .NavigationItem a.active {
